; ModuleID = '/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_net_dev.c_netdev_rename_all_lock.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/proc.plugin/extr_proc_net_dev.c_netdev_rename_all_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netdev = type { %struct.netdev* }

@netdev_rename_mutex = common dso_local global i32 0, align 4
@netdev_root = common dso_local global %struct.netdev* null, align 8
@netdev_pending_renames = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @netdev_rename_all_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @netdev_rename_all_lock() #0 {
  %1 = alloca %struct.netdev*, align 8
  %2 = call i32 @netdata_mutex_lock(i32* @netdev_rename_mutex)
  %3 = load %struct.netdev*, %struct.netdev** @netdev_root, align 8
  store %struct.netdev* %3, %struct.netdev** %1, align 8
  br label %4

4:                                                ; preds = %10, %0
  %5 = load %struct.netdev*, %struct.netdev** %1, align 8
  %6 = icmp ne %struct.netdev* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load %struct.netdev*, %struct.netdev** %1, align 8
  %9 = call i32 @netdev_rename(%struct.netdev* %8)
  br label %10

10:                                               ; preds = %7
  %11 = load %struct.netdev*, %struct.netdev** %1, align 8
  %12 = getelementptr inbounds %struct.netdev, %struct.netdev* %11, i32 0, i32 0
  %13 = load %struct.netdev*, %struct.netdev** %12, align 8
  store %struct.netdev* %13, %struct.netdev** %1, align 8
  br label %4

14:                                               ; preds = %4
  store i64 0, i64* @netdev_pending_renames, align 8
  %15 = call i32 @netdata_mutex_unlock(i32* @netdev_rename_mutex)
  ret void
}

declare dso_local i32 @netdata_mutex_lock(i32*) #1

declare dso_local i32 @netdev_rename(%struct.netdev*) #1

declare dso_local i32 @netdata_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
